@@ -1,3 +1,7 @@
+2011-02-05  Steffen Gebert  <steffen@steffen-gebert.de>
+
+	* Fixed bug #17374: implode() issues in Install Tool
+
 2011-02-02  Christian Kuhn  <lolli@schwarzbu.ch>
 
 	* Fixed bug #17087: BE user password not changable via setup module with "saltedpasswords" (Thanks to Marcus Krause)
